--- a/restaurants/delice.html
+++ b/restaurants/delice.html
@@ -45,51 +45,51 @@
                 <h2 class="type-menu">Entrées</h2>
 
                 <article class="card">
-                    <input type="checkbox" id="plat1" class="checkbox">
-                    <label for="plat1" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Tartare de thon<br>
-                                <span class="card-txt__subtitle">Assaisonné au yuzu</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Tartare de thon<br>
+                            <span class="card-txt__subtitle">Assaisonné au yuzu</span>
+                        </h3>
+                        <input type="checkbox" id="plat1" class="checkbox">
+                        <label for="plat1" class="">
                             <span class="price">
                                 <span class="card-price">25€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat2" class="checkbox">
-                    <label for="plat2" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Bouchée de homard croustillant<br>
-                                <span class="card-txt__subtitle">Et sa farandole de petits légumes</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Bouchée de homard croustillant<br>
+                            <span class="card-txt__subtitle">Et sa farandole de petits légumes</span>
+                        </h3>
+                        <input type="checkbox" id="plat2" class="checkbox">
+                        <label for="plat2" class="">
                             <span class="price">
                                 <span class="card-price">35€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat3" class="checkbox">
-                    <label for="plat3" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Poulet rôti aux herbes de Provence<br>
-                                <span class="card-txt__subtitle">Et sa crème de truffe</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Poulet rôti aux herbes de Provence<br>
+                            <span class="card-txt__subtitle">Et sa crème de truffe</span>
+                        </h3>
+                        <input type="checkbox" id="plat3" class="checkbox">
+                        <label for="plat3" class="">
                             <span class="price">
                                 <span class="card-price">40€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <div class="title-part P">
@@ -97,51 +97,35 @@
                 </div>
 
                 <article class="card">
-                    <input type="checkbox" id="plat4" class="checkbox">
-                    <label for="plat4" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Poulet rôti aux herbes de Provence<br>
-                                <span class="card-txt__subtitle">Et sa crème de truffe</span>
-                            </h3>
-                            <span class="price">
-                                <span class="card-price">40€</span>
-                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                            </span>
-                        </span>
-                    </label>
-                </article>
-
-                <article class="card">
-                    <input type="checkbox" id="plat5" class="checkbox">
-                    <label for="plat5" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Langouste rôtie<br>
-                                <span class="card-txt__subtitle">Et ses légumes de saison</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Langouste rôtie<br>
+                            <span class="card-txt__subtitle">Et ses légumes de saison</span>
+                        </h3>
+                        <input type="checkbox" id="plat4" class="checkbox">
+                        <label for="plat4" class="">
                             <span class="price">
                                 <span class="card-price">35€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat6" class="checkbox">
-                    <label for="plat6" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Côte de bœuf Angus<br>
-                                <span class="card-txt__subtitle">Et sa purée de panais</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Côte de bœuf Angus<br>
+                            <span class="card-txt__subtitle">Et sa purée de panais</span>
+                        </h3>
+                        <input type="checkbox" id="plat5" class="checkbox">
+                        <label for="plat5" class="">
                             <span class="price">
                                 <span class="card-price">44€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <div class="title-part D">
@@ -149,52 +133,53 @@
                 </div>
 
                 <article class="card">
-                    <input type="checkbox" id="plat7" class="checkbox">
-                    <label for="plat7" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Farandole de desserts<br>
-                                <span class="card-txt__subtitle">Du chef</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Farandole de desserts<br>
+                            <span class="card-txt__subtitle">Du chef</span>
+                        </h3>
+                        <input type="checkbox" id="plat6" class="checkbox">
+                        <label for="plat6" class="">
                             <span class="price">
                                 <span class="card-price">18€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat8" class="checkbox">
-                    <label for="plat8" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Crème brulée<br>
-                                <span class="card-txt__subtitle">Revisitée</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Crème brulée<br>
+                            <span class="card-txt__subtitle">Revisitée</span>
+                        </h3>
+                        <input type="checkbox" id="plat7" class="checkbox">
+                        <label for="plat7" class="">
                             <span class="price">
                                 <span class="card-price">22€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat9" class="checkbox">
-                    <label for="plat9" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Tiramisu<br>
-                                <span class="card-txt__subtitle">À la noisette</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Tiramisu<br>
+                            <span class="card-txt__subtitle">À la noisette</span>
+                        </h3>
+                        <input type="checkbox" id="plat8" class="checkbox">
+                        <label for="plat8" class="">
                             <span class="price">
                                 <span class="card-price">23€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
+
             </section>
 
             <div class="button">
@@ -205,7 +190,7 @@
 
         </section>
     </main>
-    
+
     <footer>
         <div class="footer-container">
             <img id="LogoFooter" src="../assets/icons/ohmyfood.png" alt="Logo oh my food">
