--- a/restaurants/la-note.html
+++ b/restaurants/la-note.html
@@ -47,67 +47,67 @@
                 </div>
 
                 <article class="card">
-                    <input type="checkbox" id="plat" class="checkbox">
-                    <label for="plat" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Ravioles de foie gras<br>
-                                <span class="card-txt__subtitle">Accompagnées de leur crème à la truffe</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Ravioles de foie gras<br>
+                            <span class="card-txt__subtitle">Accompagnées de leur crème à la truffe</span>
+                        </h3>
+                        <input type="checkbox" id="plat" class="checkbox">
+                        <label for="plat" class="">
                             <span class="price">
                                 <span class="card-price">25€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat2" class="checkbox">
-                    <label for="plat2" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Caviar osciètre<br>
-                                <span class="card-txt__subtitle">Sur blini à la farine de blé noir</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Caviar osciètre<br>
+                            <span class="card-txt__subtitle">Sur blini à la farine de blé noir</span>
+                        </h3>
+                        <input type="checkbox" id="plat2" class="checkbox">
+                        <label for="plat2" class="">
                             <span class="price">
                                 <span class="card-price">35€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat3" class="checkbox">
-                    <label for="plat3" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Homard et espuma de potiron<br>
-                                <span class="card-txt__subtitle">Marinés aux zestes d'orange</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Homard et espuma de potiron<br>
+                            <span class="card-txt__subtitle">Marinés aux zestes d'orange</span>
+                        </h3>
+                        <input type="checkbox" id="plat3" class="checkbox">
+                        <label for="plat3" class="">
                             <span class="price">
                                 <span class="card-price">20€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat4" class="checkbox">
-                    <label for="plat4" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Foie gras de canard cuit entier<br>
-                                <span class="card-txt__subtitle">Confiture de figue et pain toasté</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Foie gras de canard cuit entier<br>
+                            <span class="card-txt__subtitle">Confiture de figue et pain toasté</span>
+                        </h3>
+                        <input type="checkbox" id="plat4" class="checkbox">
+                        <label for="plat4" class="">
                             <span class="price">
                                 <span class="card-price">35€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <div class="title-part P">
@@ -115,51 +115,51 @@
                 </div>
 
                 <article class="card">
-                    <input type="checkbox" id="plat5" class="checkbox">
-                    <label for="plat5" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Noix de coquilles Saint-Jacques<br>
-                                <span class="card-txt__subtitle">Sur lit de purée de céleri-rave</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Noix de coquilles Saint-Jacques<br>
+                            <span class="card-txt__subtitle">Sur lit de purée de céleri-rave</span>
+                        </h3>
+                        <input type="checkbox" id="plat5" class="checkbox">
+                        <label for="plat5" class="">
                             <span class="price">
                                 <span class="card-price">40€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat6" class="checkbox">
-                    <label for="plat6" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Langoustine poêlée<br>
-                                <span class="card-txt__subtitle">Purée de patate douce</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Langoustine poêlée<br>
+                            <span class="card-txt__subtitle">Purée de patate douce</span>
+                        </h3>
+                        <input type="checkbox" id="plat6" class="checkbox">
+                        <label for="plat6" class="">
                             <span class="price">
                                 <span class="card-price">35€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat7" class="checkbox">
-                    <label for="plat7" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Mijoté de queue de bœuf<br>
-                                <span class="card-txt__subtitle">Et riz sauvage aux zestes de citron</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Mijoté de queue de bœuf<br>
+                            <span class="card-txt__subtitle">Et riz sauvage aux zestes de citron</span>
+                        </h3>
+                        <input type="checkbox" id="plat7" class="checkbox">
+                        <label for="plat7" class="">
                             <span class="price">
                                 <span class="card-price">45€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <div class="title-part D">
@@ -167,52 +167,53 @@
                 </div>
 
                 <article class="card">
-                    <input type="checkbox" id="plat8" class="checkbox">
-                    <label for="plat8" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Macaron noisette et chocolat<br>
-                                <span class="card-txt__subtitle">Glace au caramel brun et sel de Guérande</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Macaron noisette et chocolat<br>
+                            <span class="card-txt__subtitle">Glace au caramel brun et sel de Guérande</span>
+                        </h3>
+                        <input type="checkbox" id="plat8" class="checkbox">
+                        <label for="plat8" class="">
                             <span class="price">
                                 <span class="card-price">18€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat9" class="checkbox">
-                    <label for="plat9" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Baba au rhum revisité<br>
-                                <span class="card-txt__subtitle">Avec son coulis de citron</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Baba au rhum revisité<br>
+                            <span class="card-txt__subtitle">Avec son coulis de citron</span>
+                        </h3>
+                        <input type="checkbox" id="plat9" class="checkbox">
+                        <label for="plat9" class="">
                             <span class="price">
                                 <span class="card-price">22€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
 
                 <article class="card">
-                    <input type="checkbox" id="plat10" class="checkbox">
-                    <label for="plat10" class="menu-label">
-                        <span class="contain">
-                            <h3 class="card-txt">
-                                Tarte au citron meringuée<br>
-                                <span class="card-txt__subtitle">Déstructurée</span>
-                            </h3>
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Tarte au citron meringuée<br>
+                            <span class="card-txt__subtitle">Déstructurée</span>
+                        </h3>
+                        <input type="checkbox" id="plat10" class="checkbox">
+                        <label for="plat10" class="">
                             <span class="price">
                                 <span class="card-price">23€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </span>
-                    </label>
+                        </label>
+                    </div>
                 </article>
+
             </section>
 
             <div class="button">
@@ -224,7 +225,7 @@
         </section>
 
     </main>
-    
+
     <footer>
         <div class="footer-container">
             <img id="LogoFooter" src="../assets/icons/ohmyfood.png" alt="Logo oh my food">
