--- a/restaurants/francaise.html
+++ b/restaurants/francaise.html
@@ -46,157 +46,157 @@
                     <h2 class="type-menu">Entrées</h2>
                 </div>
 
-                    <article class="card">
+                <article class="card">
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Tartare de poulpe acidulé<br>
+                            <span class="card-txt__subtitle">Aux zestes d'orange</span>
+                        </h3>
                         <input type="checkbox" id="plat1" class="checkbox">
-                        <label for="plat1" class="menu-label">
-                            <span class="contain">
-                                <h3 class="card-txt">
-                                    Tartare de poulpe acidulé<br>
-                                    <span class="card-txt__subtitle">Aux zestes d'orange</span>
-                                </h3>
-                                <span class="price">
-                                    <span class="card-price">25€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
+                        <label for="plat1" class="">
+                            <span class="price">
+                                <span class="card-price">25€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
                         </label>
-                    </article>
+                    </div>
+                </article>
 
-                    <article class="card">
+                <article class="card">
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Velouté de légumes d'antan<br>
+                            <span class="card-txt__subtitle">Carotte, panais, topinambour</span>
+                        </h3>
                         <input type="checkbox" id="plat2" class="checkbox">
-                        <label for="plat2" class="menu-label">
-                            <span class="contain">
-                                <h3 class="card-txt">
-                                    Velouté de légumes d'antan<br>
-                                    <span class="card-txt__subtitle">Carotte, panais, topinambour</span>
-                                </h3>
-                                <span class="price">
-                                    <span class="card-price">35€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
+                        <label for="plat2" class="">
+                            <span class="price">
+                                <span class="card-price">35€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
                         </label>
-                    </article>
+                    </div>
+                </article>
 
-                    <article class="card">
+                <article class="card">
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Soupe à l'oignon<br>
+                            <span class="card-txt__subtitle">Revisitée</span>
+                        </h3>
                         <input type="checkbox" id="plat3" class="checkbox">
-                        <label for="plat3" class="menu-label">
-                            <span class="contain">
-                                <h3 class="card-txt">
-                                    Soupe à l'oignon<br>
-                                    <span class="card-txt__subtitle">Revisitée</span>
-                                </h3>
-                                <span class="price">
-                                    <span class="card-price">20€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
+                        <label for="plat3" class="">
+                            <span class="price">
+                                <span class="card-price">20€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
                         </label>
-                    </article>
-
-                    <div class="title-part P">
-                        <h2 class="type-menu">Plats</h2>
                     </div>
+                </article>
 
-                    <article class="card">
+                <div class="title-part P">
+                    <h2 class="type-menu">Plats</h2>
+                </div>
+
+                <article class="card">
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Coquilles Saint-Jacques<br>
+                            <span class="card-txt__subtitle">Accompagnées d'une purée de panais</span>
+                        </h3>
                         <input type="checkbox" id="plat4" class="checkbox">
-                        <label for="plat4" class="menu-label">
-                            <span class="contain">
-                                <h3 class="card-txt">
-                                    Coquilles Saint-Jacques<br>
-                                    <span class="card-txt__subtitle">Accompagnées d'une purée de panais</span>
-                                </h3>
-                                <span class="price">
-                                    <span class="card-price">40€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
+                        <label for="plat4" class="">
+                            <span class="price">
+                                <span class="card-price">40€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
                         </label>
-                    </article>
-
-                    <article class="card">
-                        <input type="checkbox" id="plat5" class="checkbox">
-                        <label for="plat5" class="menu-label">
-                            <span class="contain">
-                                <h3 class="card-txt">
-                                    Magret de canard<br>
-                                    <span class="card-txt__subtitle">Et parmentier de pommes de terre</span>
-                                </h3>
-                                <span class="price">
-                                    <span class="card-price">35€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
-                            </span>
-                        </label>
-                    </article>
-
-                    <article class="card">
-                        <input type="checkbox" id="plat6" class="checkbox">
-                        <label for="plat6" class="menu-label">
-                            <span class="contain">
-                                <h3 class="card-txt">
-                                    Pigeonneau d'Ille-et-Vilaine<br>
-                                    <span class="card-txt__subtitle">Sur son lit de gnocchis aux légumes</span>
-                                </h3>
-                                <span class="price">
-                                    <span class="card-price">44€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
-                            </span>
-                        </label>
-                    </article>
-
-                    <div class="title-part D">
-                        <h2 class="type-menu">Dessert</h2>
                     </div>
+                </article>
 
-                    <article class="card">
+                <article class="card">
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Magret de canard<br>
+                            <span class="card-txt__subtitle">Et parmentier de pommes de terre</span>
+                        </h3>
+                        <input type="checkbox" id="plat5" class="checkbox">
+                        <label for="plat5" class="">
+                            <span class="price">
+                                <span class="card-price">35€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                            </span>
+                        </label>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Pigeonneau d'Ille-et-Vilaine<br>
+                            <span class="card-txt__subtitle">Sur son lit de gnocchis aux légumes</span>
+                        </h3>
+                        <input type="checkbox" id="plat6" class="checkbox">
+                        <label for="plat6" class="">
+                            <span class="price">
+                                <span class="card-price">44€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                            </span>
+                        </label>
+                    </div>
+                </article>
+
+                <div class="title-part D">
+                    <h2 class="type-menu">Dessert</h2>
+                </div>
+
+                <article class="card">
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Pétales de violettes glacés<br>
+                            <span class="card-txt__subtitle">Et purée de noisettes</span>
+                        </h3>
                         <input type="checkbox" id="plat7" class="checkbox">
-                        <label for="plat7" class="menu-label">
-                            <span class="contain">
-                                <h3 class="card-txt">
-                                    Pétales de violettes glacés<br>
-                                    <span class="card-txt__subtitle">Et purée de noisettes</span>
-                                </h3>
-                                <span class="price">
-                                    <span class="card-price">18€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
+                        <label for="plat7" class="">
+                            <span class="price">
+                                <span class="card-price">18€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
                         </label>
-                    </article>
+                    </div>
+                </article>
 
-                    <article class="card">
+                <article class="card">
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Fondant au chocolat<br>
+                            <span class="card-txt__subtitle">Revisité</span>
+                        </h3>
                         <input type="checkbox" id="plat8" class="checkbox">
-                        <label for="plat8" class="menu-label">
-                            <span class="contain">
-                                <h3 class="card-txt">
-                                    Fondant au chocolat<br>
-                                    <span class="card-txt__subtitle">Revisité</span>
-                                </h3>
-                                <span class="price">
-                                    <span class="card-price">22€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
+                        <label for="plat8" class="">
+                            <span class="price">
+                                <span class="card-price">22€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
                         </label>
-                    </article>
+                    </div>
+                </article>
 
-                    <article class="card">
+                <article class="card">
+                    <div class="menu-label">
+                        <h3 class="card-txt">
+                            Millefeuille croustillant<br>
+                            <span class="card-txt__subtitle">Myrtilles et pâte d'amande</span>
+                        </h3>
                         <input type="checkbox" id="plat9" class="checkbox">
-                        <label for="plat9" class="menu-label">
-                            <span class="contain">
-                                <h3 class="card-txt">
-                                    Millefeuille croustillant<br>
-                                    <span class="card-txt__subtitle">Myrtilles et pâte d'amande</span>
-                                </h3>
-                                <span class="price">
-                                    <span class="card-price">23€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
+                        <label for="plat9" class="">
+                            <span class="price">
+                                <span class="card-price">23€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
                         </label>
-                    </article>
+                    </div>
+                </article>
             </section>
 
             <div class="button">
